# Edu

./: AUDIO_QUICKSTART.md  AUDIO_SETUP.md  README.md  docker-compose.yml  package-lock.json  package.json
back/: .env.example  AGENTS.md  README.md  pyproject.toml
back/app/: main.py
back/app/api/: auth_routes.py  deps.py  stream.py
back/app/core/: auth.py  config.py
back/app/core/audio/: base_session.py  gemini_live_session.py  text_pipeline_session.py
docs/: home.md
front/: .env.example  AGENTS.md  README.md  app.json  package-lock.json  package.json
front/app/: _layout.tsx  index.tsx  login.tsx
front/app/admin/: _layout.tsx
front/app/admin/parent/: index.tsx
front/app/components/: ImageCaptureButton.tsx
front/app/learner/: index.tsx
front/components/: AudioButton.tsx
front/contexts/: AuthContext.tsx
front/hooks/: useAudioStream.ts
front/services/: auth.ts
