[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.0",
    "google-genai>=2.8.0",
    "pydantic-settings>=2.14.1",
    "strawberry-graphql[fastapi]>=0.316.0",
    "uvicorn>=0.49.0",
    "webrtcvad-wheels>=2.0.14",
    "websockets>=16.0",
]
